--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -123,6 +123,14 @@
     display: none
 
 // Fondos
+.BGT02
+  background-image: url("../assets/curso/temas/tema2/imgfondo2.png")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center
+  margin-inline: -3rem !important
+  @media (max-width: $bp-max-sm)
+    margin-inline: -1.5rem !important
 
 .tarjeta--BG04
   background-image: url("../assets/curso/temas/tema1/bgpasos.png")
