--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -104,6 +104,8 @@
   background-size: cover 
   background-repeat: no-repeat
   background-position: center
+  width: 120%;
+
 
 .tarjeta--tabla
   background-color: #FEF7EB
@@ -277,8 +279,10 @@
 .acordion__accion__btn--b
   background-color: #09614D
 .acordion__accion__btn--b i
-  color: #09614D
-
+  color: white
+.tit-tarj
+  i.fas.fa-angle-up
+    color: #09614D
 
 //tablas
 .tabla-a thead
