--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -86,6 +86,14 @@
   @media (max-width: $bp-max-sm)
     margin-inline: -1.5rem !important
 
+.tarjeta--BG07
+  background-color:#FFE9DF
+  background-size: cover 
+  background-repeat: no-repeat
+  background-position: center
+  @media (max-width: $bp-max-sm)
+    margin-inline: -1.5rem !important
+
 
 .tarjeta--BG02
   background-image: url("../assets/curso/temas/tema1/imgfondotarjeta.svg")
@@ -104,7 +112,6 @@
   background-size: cover 
   background-repeat: no-repeat
   background-position: center
-  width: 120%;
 
 
 .tarjeta--tabla
@@ -127,6 +134,15 @@
 // Fondos
 .BGT02
   background-image: url("../assets/curso/temas/tema2/imgfondo2.png")
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center
+  margin-inline: -3rem !important
+  @media (max-width: $bp-max-sm)
+    margin-inline: -1.5rem !important
+
+.BGT04
+  background-image: url("../assets/curso/temas/tema4/imgBG01.png")
   background-size: cover
   background-repeat: no-repeat
   background-position: center
